--- a/css/style.css
+++ b/css/style.css
@@ -1392,6 +1392,140 @@ label {
     font-size: 9vmax;
   }
 }
+#projects {
+  width: 100%;
+  padding: 100px 0px;
+}
+#projects .inner {
+  width: 1180px;
+  margin: 0 auto;
+  position: relative;
+}
+#projects .inner h2 {
+  font: 18px/1 "Josefin Sans", "Noto Sans KR";
+  color: #777;
+  text-align: center;
+  position: relative;
+  z-index: 3;
+}
+#projects .inner h1 {
+  font: bold 36px/1 "Source Sans Pro", "Noto Sans KR";
+  margin-bottom: 80px;
+  color: #252A34;
+  text-align: center;
+  position: relative;
+  z-index: 2;
+}
+#projects .inner h1::first-letter {
+  color: #FF2E63;
+  font-size: 50px;
+}
+#projects .inner h1::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 80px;
+  height: 110px;
+  border: 3px solid #08D9D6;
+  top: -100%;
+  left: 50%;
+  transform: translate(-50%, -10%);
+  z-index: -1;
+}
+#projects .inner .wrap {
+  width: 100%;
+}
+#projects .inner .wrap article {
+  width: 100%;
+  height: 300px;
+  margin-bottom: 40px;
+}
+#projects .inner .wrap article .itemImg li {
+  width: 100%;
+  height: 280px;
+  background: #333;
+}
+#projects .inner .wrap article .itemImg li a {
+  display: block;
+  height: 100%;
+  overflow: hidden;
+}
+#projects .inner .wrap article .itemImg li a:hover img {
+  filter: saturate(100%);
+  transform: scale(1.1);
+}
+#projects .inner .wrap article .itemImg li a img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  filter: saturate(0%);
+  transition: 0.5s;
+}
+#projects .inner .wrap article .itemImg li:last-child {
+  margin-right: 0;
+}
+#projects .inner .wrap article .swiper-pagination {
+  top: 95%;
+}
+#projects .inner .wrap article .swiper-pagination span {
+  opacity: 1;
+  background: #252A34;
+}
+#projects .inner .wrap article .swiper-pagination span.swiper-pagination-bullet-active {
+  background: #08D9D6;
+}
+#projects .inner .wrap article .swiper-scrollbar {
+  opacity: 1;
+  background: #ddd;
+  width: 50%;
+}
+#projects .inner .wrap .pagenation {
+  width: 100%;
+}
+#projects .inner .wrap .pagenation a {
+  font-size: 0;
+}
+#projects .inner .wrap .pagenation a span {
+  display: inline-block;
+  margin: 0px 15px;
+  letter-spacing: -1px;
+  font: 11px/1 "Josefin Sans", "Noto Sans KR";
+  color: #252A34;
+  transition: 0.5s;
+}
+#projects .inner .wrap .pagenation a i {
+  font-size: 13px;
+  color: #252A34;
+  transition: 0.5s;
+}
+#projects .inner .wrap .pagenation .prev {
+  float: left;
+}
+#projects .inner .wrap .pagenation .prev:hover span {
+  transform: translateX(30%);
+}
+#projects .inner .wrap .pagenation .next {
+  float: right;
+}
+#projects .inner .wrap .pagenation .next:hover span {
+  transform: translateX(-30%);
+}
+#projects .inner .wrap .pagenation::after {
+  content: "";
+  display: block;
+  clear: both;
+}
+
+/* tablet ------------------------- */
+@media screen and (max-width: 1179px) {
+  #projects {
+    width: 100%;
+    padding: 100px 20px;
+  }
+  #projects .inner {
+    width: 100%;
+  }
+}
 #header_sub {
   width: 100%;
   position: absolute;
@@ -3701,130 +3835,6 @@ figure.pop .btnClose::after {
   top: 0px;
 }
 
-#projects {
-  width: 100%;
-  padding: 100px 0px;
-}
-#projects .inner {
-  width: 1180px;
-  margin: 0 auto;
-  position: relative;
-}
-#projects .inner h2 {
-  font: 18px/1 "Josefin Sans", "Noto Sans KR";
-  color: #777;
-  text-align: center;
-  position: relative;
-  z-index: 3;
-}
-#projects .inner h1 {
-  font: bold 36px/1 "Source Sans Pro", "Noto Sans KR";
-  margin-bottom: 80px;
-  color: #252A34;
-  text-align: center;
-  position: relative;
-  z-index: 2;
-}
-#projects .inner h1::first-letter {
-  color: #FF2E63;
-  font-size: 50px;
-}
-#projects .inner h1::before {
-  content: "";
-  display: block;
-  position: absolute;
-  width: 80px;
-  height: 110px;
-  border: 3px solid #08D9D6;
-  top: -100%;
-  left: 50%;
-  transform: translate(-50%, -10%);
-  z-index: -1;
-}
-#projects .inner .wrap {
-  width: 100%;
-}
-#projects .inner .wrap article {
-  width: 100%;
-  height: 300px;
-  margin-bottom: 40px;
-}
-#projects .inner .wrap article .itemImg li {
-  width: 100%;
-  height: 280px;
-  background: #333;
-}
-#projects .inner .wrap article .itemImg li a {
-  display: block;
-  height: 100%;
-  overflow: hidden;
-}
-#projects .inner .wrap article .itemImg li a:hover img {
-  filter: saturate(100%);
-  transform: scale(1.1);
-}
-#projects .inner .wrap article .itemImg li a img {
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-  filter: saturate(0%);
-  transition: 0.5s;
-}
-#projects .inner .wrap article .itemImg li:last-child {
-  margin-right: 0;
-}
-#projects .inner .wrap article .swiper-pagination {
-  top: 95%;
-}
-#projects .inner .wrap article .swiper-pagination span {
-  opacity: 1;
-  background: #252A34;
-}
-#projects .inner .wrap article .swiper-pagination span.swiper-pagination-bullet-active {
-  background: #08D9D6;
-}
-#projects .inner .wrap article .swiper-scrollbar {
-  opacity: 1;
-  background: #ddd;
-  width: 50%;
-}
-#projects .inner .wrap .pagenation {
-  width: 100%;
-}
-#projects .inner .wrap .pagenation a {
-  font-size: 0;
-}
-#projects .inner .wrap .pagenation a span {
-  display: inline-block;
-  margin: 0px 15px;
-  letter-spacing: -1px;
-  font: 11px/1 "Josefin Sans", "Noto Sans KR";
-  color: #252A34;
-  transition: 0.5s;
-}
-#projects .inner .wrap .pagenation a i {
-  font-size: 13px;
-  color: #252A34;
-  transition: 0.5s;
-}
-#projects .inner .wrap .pagenation .prev {
-  float: left;
-}
-#projects .inner .wrap .pagenation .prev:hover span {
-  transform: translateX(30%);
-}
-#projects .inner .wrap .pagenation .next {
-  float: right;
-}
-#projects .inner .wrap .pagenation .next:hover span {
-  transform: translateX(-30%);
-}
-#projects .inner .wrap .pagenation::after {
-  content: "";
-  display: block;
-  clear: both;
-}
-
 #banner {
   width: 100%;
   padding: 200px 0px;
@@ -3851,14 +3861,6 @@ figure.pop .btnClose::after {
 
 /* tablet ------------------------- */
 @media screen and (max-width: 1179px) {
-  #projects {
-    width: 100%;
-    padding: 100px 20px;
-  }
-  #projects .inner {
-    width: 100%;
-  }
-
   #banner {
     width: 100%;
     padding: 140px 20px;
