--- a/scss/style.scss
+++ b/scss/style.scss
@@ -26,6 +26,7 @@ $pointColor : #FF2E63;
 @import "./main/visual.scss";
 @import "./main/intro.scss";
 @import "./main/services.scss";
+@import "./main/projects.scss";
 
 @import "./sub_layout.scss";
 @import "./department.scss";
@@ -52,135 +53,6 @@ $pointColor : #FF2E63;
 
   &.on {
     top: 0px;
-  }
-}
-
-
-#projects {
-  width: 100%;
-  padding: 100px 0px;
-
-  .inner {
-    width: 1180px;
-    margin: 0 auto;
-    position: relative;
-
-    h2 {
-      @include h2Title();
-    }
-
-    h1 {
-      @include h1Title();
-    }
-
-    .wrap {
-      width: 100%;
-
-      article {
-        width: 100%;
-        height: 300px;
-        margin-bottom: 40px;
-
-        .itemImg {
-
-          li {
-            width: 100%;
-            height: 280px;
-            background: #333;
-
-            a {
-              display: block;
-              height: 100%;
-              overflow: hidden;
-
-              &:hover {
-                img {
-                  filter: saturate(100%);
-                  transform: scale(1.1);
-                }
-              }
-
-              img {
-                width: 100%;
-                height: 100%;
-                object-fit: cover;
-                filter: saturate(0%);
-                transition: 0.5s;
-              }
-            }
-
-            &:last-child {
-              margin-right: 0;
-            }
-          }
-        }
-
-        .swiper-pagination {
-          top: 95%;
-
-          span {
-            opacity: 1;
-            background: $defColor;
-
-            &.swiper-pagination-bullet-active {
-              background: $themeColor;
-            }
-          }
-        }
-
-        .swiper-scrollbar {
-          opacity: 1;
-          background: #ddd;
-          width: 50%;
-        }
-      }
-
-      .pagenation {
-        width: 100%;
-
-        a {
-          font-size: 0;
-
-          span {
-            display: inline-block;
-            margin: 0px 15px;
-            letter-spacing: -1px;
-            font: 11px/1 $fontDef;
-            color: #252A34;
-            transition: 0.5s;
-          }
-
-          i {
-            font-size: 13px;
-            color: #252A34;
-            transition: 0.5s;
-
-          }
-        }
-
-        .prev {
-          float: left;
-
-          &:hover {
-            span {
-              transform: translateX(30%);
-            }
-          }
-        }
-
-        .next {
-          float: right;
-
-          &:hover {
-            span {
-              transform: translateX(-30%);
-            }
-          }
-        }
-
-        @include floatRelease();
-      }
-    }
   }
 }
 
@@ -213,17 +85,6 @@ $pointColor : #FF2E63;
 
 /* tablet ------------------------- */
 @media screen and (max-width: $tablet) {
-  
-
-  #projects {
-    width: 100%;
-    padding: 100px 20px;
-
-    .inner {
-      width: 100%;
-    }
-  }
-
   #banner {
     width: 100%;
     padding: 140px 20px;
