--- a/scss/style.scss
+++ b/scss/style.scss
@@ -27,6 +27,7 @@ $pointColor : #FF2E63;
 @import "./main/intro.scss";
 @import "./main/services.scss";
 @import "./main/projects.scss";
+@import "./main/banner.scss";
 
 @import "./sub_layout.scss";
 @import "./department.scss";
@@ -53,58 +54,5 @@ $pointColor : #FF2E63;
 
   &.on {
     top: 0px;
-  }
-}
-
-#banner {
-  width: 100%;
-  padding: 200px 0px;
-  background: url(../img/banner.jpg) no-repeat center/cover fixed;
-
-  .inner {
-    width: 1180px;
-    margin: 0px auto;
-    position: relative;
-
-    h1 {
-      @include title($fontSize: 30px, $color: #fff, $mB: 20px);
-      text-shadow: 0px 0px 5px rgba(0, 0, 0, 0.6);
-    }
-
-    p {
-      font: 16px/1.3 $fontDef;
-      color: #eee;
-      text-align: center;
-      text-shadow: 0px 0px 2px rgba(0, 0, 0, 1);
-    }
-  }
-}
-
-
-
-/* tablet ------------------------- */
-@media screen and (max-width: $tablet) {
-  #banner {
-    width: 100%;
-    padding: 140px 20px;
-
-    .inner {
-      width: 100%;
-
-      h1 {
-        @include title($fontSize: 24px, $color: #fff, $mB: 10px);
-      }
-
-      p {
-        font: 13px/1.3 $fontDef;
-      }
-    }
-  }  
-}
-
-/* mobile ------------------------- */
-@media screen and (max-width: $mobile) {
-  #banner {
-    padding: 100px 20px;
   }
 }
