--- a/scss/main/_banner.scss
+++ b/scss/main/_banner.scss
@@ -1,6 +1,5 @@
 #banner {
-  width: 100%;
-  padding: 200px 0px;
+  @include sectionPadding($pd: 200px);
   background: url(../img/banner.jpg) no-repeat center/cover fixed;
 
   .inner {
