--- a/scss/style.scss
+++ b/scss/style.scss
@@ -28,6 +28,7 @@ $pointColor : #FF2E63;
 @import "./main/services.scss";
 @import "./main/projects.scss";
 @import "./main/banner.scss";
+@import "./main/brand.scss";
 
 @import "./sub/sub_layout.scss";
 @import "./sub/department.scss";
