--- a/css/style.css
+++ b/css/style.css
@@ -1575,6 +1575,11 @@ label {
     width: 100%;
   }
 }
+#brand {
+  width: 100%;
+  padding: 140px 0px;
+}
+
 #header_sub {
   width: 100%;
   position: absolute;
