--- a/css/style.css
+++ b/css/style.css
@@ -1579,6 +1579,12 @@ label {
   width: 100%;
   padding: 140px 0px;
 }
+#brand .inner {
+  width: 1180px;
+  margin: 0 auto;
+  position: relative;
+}
+
 #header_sub {
   width: 100%;
   position: absolute;
