--- a/css/style.css
+++ b/css/style.css
@@ -1588,16 +1588,35 @@ label {
   font: 18px/1 "Josefin Sans", "Noto Sans KR";
   color: #777;
   text-align: center;
+  position: relative;
+  z-index: 3;
 }
 #brand .inner h1 {
   font: bold 36px/1 "Source Sans Pro", "Noto Sans KR";
-  margin-bottom: 40px;
+  margin-bottom: 80px;
   color: #252A34;
   text-align: center;
+  position: relative;
+  z-index: 2;
 }
 #brand .inner h1::first-letter {
   color: #FF2E63;
   font-size: 50px;
+}
+#brand .inner h1::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 80px;
+  height: 110px;
+  border: 3px solid #08D9D6;
+  top: -100%;
+  left: 50%;
+  transform: translate(-50%, -10%);
+  z-index: -1;
+}
+#brand .inner .wrap {
+  width: 100%;
 }
 
 #header_sub {
