--- a/css/style.css
+++ b/css/style.css
@@ -1070,7 +1070,7 @@ label {
 #services {
   width: 100%;
   padding: 140px 0px;
-  background: #f4f4f4;
+  background: #efefef;
   position: relative;
 }
 #services::before {
