--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -16,6 +16,12 @@
 
     .wrap {
       width: 100%;
+
+      article {
+        width: 380px;
+
+        
+      }
       
       @include floatRelease();
     }
