img가 article안에 예쁘게 들어갈 수 있게 조정

--- a/css/style.css
+++ b/css/style.css
@@ -1625,7 +1625,15 @@ label {
 }
 #brand .inner .wrap article {
   width: 380px;
+  height: 300px;
+}
+#brand .inner .wrap article:nth-of-type(1) {
   height: 620px;
+}
+#brand .inner .wrap article img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 #brand .inner .wrap::after {
   content: "";
