--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -19,10 +19,16 @@
 
       article {
         width: 380px;
-        height: 620px;
+        height: 300px;
+
+        &:nth-of-type(1) {
+          height: 620px;
+        }
 
         img {
-
+          width: 100%;
+          height: 100%;
+          object-fit: cover;
         }
       }
       
