--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -4,7 +4,7 @@
   .inner {
     width: 1180px;
     margin: 0 auto;
-    //position: relative;
+    position: relative;
 
     h2 {
       @include h2Title();
