--- a/css/style.css
+++ b/css/style.css
@@ -1627,6 +1627,7 @@ label {
 #brand .inner .wrap article {
   width: 380px;
   height: 300px;
+  background: #efefef;
 }
 #brand .inner .wrap article:nth-of-type(1) {
   height: 620px;
