--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -20,6 +20,7 @@
       article {
         width: 380px;
         height: 300px;
+        background: #efefef;
 
         &:nth-of-type(1) {
           height: 620px;
