--- a/css/style.css
+++ b/css/style.css
@@ -1628,6 +1628,7 @@ label {
   width: 380px;
   height: 300px;
   background: #efefef;
+  float: left;
 }
 #brand .inner .wrap article:nth-of-type(1) {
   height: 620px;
