--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -21,6 +21,7 @@
         width: 380px;
         height: 300px;
         background: #efefef;
+        float: left;
 
         &:nth-of-type(1) {
           height: 620px;
