--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -22,10 +22,23 @@
         height: 300px;
         background: #efefef;
         float: left;
+        margin-right: 20px;
+
+        &:nth-of-type(odd) {
+          margin-right: 0px;
+        }
 
         &:nth-of-type(1) {
           height: 620px;
         }
+        
+        /*&:nth-of-type(3) {
+          margin-right: 0px;
+        }
+
+        &:nth-of-type(5) {
+          margin-right: 0px;
+        }*/
 
         img {
           width: 100%;
