--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -28,6 +28,10 @@
           margin-right: 0px;
         }
 
+        &:nth-of-type(even) {
+          margin-left: 20px;
+        }
+
         &:nth-of-type(1) {
           height: 620px;
         }
