--- a/css/style.css
+++ b/css/style.css
@@ -1630,13 +1630,6 @@ label {
   background: #efefef;
   float: left;
   margin-right: 20px;
-  /*&:nth-of-type(3) {
-    margin-right: 0px;
-  }
-
-  &:nth-of-type(5) {
-    margin-right: 0px;
-  }*/
 }
 #brand .inner .wrap article:nth-of-type(odd) {
   margin-right: 0px;
@@ -1646,6 +1639,9 @@ label {
 }
 #brand .inner .wrap article:nth-of-type(1) {
   height: 620px;
+}
+#brand .inner .wrap article:nth-of-type(n+1):nth-of-type(n+2) {
+  margin-bottom: 20px;
 }
 #brand .inner .wrap article img {
   width: 100%;
