--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -36,13 +36,9 @@
           height: 620px;
         }
         
-        /*&:nth-of-type(3) {
-          margin-right: 0px;
+        &:nth-of-type(n+1):nth-of-type(n+2) {
+          margin-bottom: 20px;
         }
-
-        &:nth-of-type(5) {
-          margin-right: 0px;
-        }*/
 
         img {
           width: 100%;
