--- a/css/style.css
+++ b/css/style.css
@@ -1630,6 +1630,7 @@ label {
   background: #efefef;
   float: left;
   margin-right: 20px;
+  position: relative;
 }
 #brand .inner .wrap article:nth-of-type(odd) {
   margin-right: 0px;
