--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -23,6 +23,7 @@
         background: #efefef;
         float: left;
         margin-right: 20px;
+        position: relative;
 
         &:nth-of-type(odd) {
           margin-right: 0px;
