가상선택자 추가

--- a/css/style.css
+++ b/css/style.css
@@ -1632,6 +1632,10 @@ label {
   margin-right: 20px;
   position: relative;
 }
+#brand .inner .wrap article::after {
+  content: "";
+  position: absolute;
+}
 #brand .inner .wrap article:nth-of-type(odd) {
   margin-right: 0px;
 }
