--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -25,6 +25,11 @@
         margin-right: 20px;
         position: relative;
 
+        &::after {
+          content: '';
+          position: absolute;
+        }
+
         &:nth-of-type(odd) {
           margin-right: 0px;
         }
