가상선택자에 배경색 입히기

--- a/css/style.css
+++ b/css/style.css
@@ -1635,6 +1635,7 @@ label {
 #brand .inner .wrap article::after {
   content: "";
   position: absolute;
+  background: linear-gradient(45deg, rgba(65, 105, 225, 0.4), rgba(255, 105, 180, 0.4));
 }
 #brand .inner .wrap article:nth-of-type(odd) {
   margin-right: 0px;
