--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -28,6 +28,7 @@
         &::after {
           content: '';
           position: absolute;
+          background: linear-gradient(45deg, rgba(65, 105, 225, 0.4), rgba(255, 105, 180, 0.4));
         }
 
         &:nth-of-type(odd) {
