--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -31,6 +31,7 @@
           background: linear-gradient(45deg, rgba(65, 105, 225, 0.4), rgba(255, 105, 180, 0.4));
           width: 100%;
           height: 100%;
+          transition: 0.5s;
         }
 
         &:nth-of-type(odd) {
