--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -32,6 +32,7 @@
           width: 100%;
           height: 100%;
           transition: 0.5s;
+          opacity: 0;
         }
 
         &:nth-of-type(odd) {
