--- a/css/style.css
+++ b/css/style.css
@@ -1636,6 +1636,11 @@ label {
   content: "";
   position: absolute;
   background: linear-gradient(45deg, rgba(65, 105, 225, 0.4), rgba(255, 105, 180, 0.4));
+  width: 100%;
+  height: 100%;
+  transition: 0.5s;
+  opacity: 0;
+  top: 0;
 }
 #brand .inner .wrap article:nth-of-type(odd) {
   margin-right: 0px;
