--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -33,6 +33,7 @@
           height: 100%;
           transition: 0.5s;
           opacity: 0;
+          top: 0;
         }
 
         &:nth-of-type(odd) {
