--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -34,6 +34,7 @@
           transition: 0.5s;
           opacity: 0;
           top: 0;
+          left: 0;
         }
 
         &:nth-of-type(odd) {
