--- a/css/style.css
+++ b/css/style.css
@@ -1632,6 +1632,9 @@ label {
   margin-right: 20px;
   position: relative;
 }
+#brand .inner .wrap article:hover::after {
+  opacity: 1;
+}
 #brand .inner .wrap article::after {
   content: "";
   position: absolute;
