--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -25,7 +25,9 @@
         margin-right: 20px;
         position: relative;
 
-        
+        &:hover {
+          &::after { opacity: 1;}
+        }
 
         &::after {
           content: '';
