--- a/css/style.css
+++ b/css/style.css
@@ -1670,6 +1670,7 @@ label {
 }
 
 /* tablet ------------------------- */
+/* mobile ------------------------- */
 #header_sub {
   width: 100%;
   position: absolute;
