--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -71,5 +71,10 @@
 
 /* tablet ------------------------- */
 @media screen and (max-width: $tablet) {
+
+}
+
+/* mobile ------------------------- */
+@media screen and (max-width: $mobile) {
   
 }
