article에 커서 이벤트 추가

--- a/css/style.css
+++ b/css/style.css
@@ -1631,6 +1631,7 @@ label {
   float: left;
   margin-right: 20px;
   position: relative;
+  cursor: pointer;
 }
 #brand .inner .wrap article:hover::after {
   opacity: 1;
