--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -27,7 +27,9 @@
         cursor: pointer;
 
         &:hover {
-          &::after { opacity: 1;}
+          &:not(&:first-of-type) {
+            &::after { opacity: 1;}
+          }
         }
 
         &::after {
