article 기본 배경색 변경

--- a/css/style.css
+++ b/css/style.css
@@ -1627,7 +1627,7 @@ label {
 #brand .inner .wrap article {
   width: 380px;
   height: 300px;
-  background: #efefef;
+  background: #252A34;
   float: left;
   margin-right: 20px;
   position: relative;
