--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -20,7 +20,7 @@
       article {
         width: 380px;
         height: 300px;
-        background: #efefef;
+        background: $defColor;
         float: left;
         margin-right: 20px;
         position: relative;
