--- a/css/style.css
+++ b/css/style.css
@@ -1655,6 +1655,7 @@ label {
 }
 #brand .inner .wrap article:nth-of-type(1) {
   height: 620px;
+  padding: 170px 50px 0px;
 }
 #brand .inner .wrap article:nth-of-type(n+1):nth-of-type(n+2) {
   margin-bottom: 20px;
