--- a/css/style.css
+++ b/css/style.css
@@ -1656,6 +1656,7 @@ label {
 #brand .inner .wrap article:nth-of-type(1) {
   height: 620px;
   padding: 170px 50px 0px;
+  text-align: center;
 }
 #brand .inner .wrap article:nth-of-type(n+1):nth-of-type(n+2) {
   margin-bottom: 20px;
