--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -55,6 +55,7 @@
         &:nth-of-type(1) {
           height: 620px;
           padding: 170px 50px 0px;
+          text-align: center;
         }
         
         &:nth-of-type(n+1):nth-of-type(n+2) {
