--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -56,6 +56,10 @@
           height: 620px;
           padding: 170px 50px 0px;
           text-align: center;
+
+          a {
+            color: $subColor1;
+          }
         }
         
         &:nth-of-type(n+1):nth-of-type(n+2) {
