--- a/css/style.css
+++ b/css/style.css
@@ -1660,6 +1660,7 @@ label {
 }
 #brand .inner .wrap article:nth-of-type(1) a {
   color: #03A6A6;
+  border: 1px solid #03A6A6;
 }
 #brand .inner .wrap article:nth-of-type(n+1):nth-of-type(n+2) {
   margin-bottom: 20px;
