--- a/css/style.css
+++ b/css/style.css
@@ -1658,9 +1658,14 @@ label {
   padding: 170px 50px 0px;
   text-align: center;
 }
+#brand .inner .wrap article:nth-of-type(1) h2 {
+  font: bold 22px/1 "Josefin Sans", "Noto Sans KR";
+  margin-bottom: 10px;
+  color: #efffff;
+}
 #brand .inner .wrap article:nth-of-type(1) p {
   color: #999;
-  font: 13px/1.4 "Josefin Sans", "Noto Sans KR";
+  font: 13px/1.3 "Josefin Sans", "Noto Sans KR";
   margin-bottom: 30px;
 }
 #brand .inner .wrap article:nth-of-type(1) a {
