--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -57,11 +57,15 @@
           padding: 170px 50px 0px;
           text-align: center;
 
-          
+          h2 {
+            font: bold 22px/1 $fontDef;
+            margin-bottom: 10px;
+            color: $subColor2;
+          }
 
           p {
             color: #999;
-            font: 13px/1.4 $fontDef;
+            font: 13px/1.3 $fontDef;
             margin-bottom: 30px;
           }
 
