--- a/css/style.css
+++ b/css/style.css
@@ -1669,8 +1669,51 @@ label {
   margin-bottom: 30px;
 }
 #brand .inner .wrap article:nth-of-type(1) a {
-  color: #03A6A6;
-  border: 1px solid #03A6A6;
+  display: inline-block;
+  margin-top: 40px;
+  padding: 13px 26px;
+  border: 1px solid #252A34;
+  color: #252A34;
+  font: bold 14px/1 "Josefin Sans", "Noto Sans KR";
+  position: relative;
+  transition: 0.5s;
+}
+#brand .inner .wrap article:nth-of-type(1) a::before {
+  content: "";
+  display: block;
+  position: absolute;
+  width: 0.5px;
+  height: 16px;
+  background: #252A34;
+  top: 50%;
+  right: -17.5px;
+  opacity: 0;
+  transition: 0.5s;
+  transform: translateY(-50%) rotate(0deg);
+}
+#brand .inner .wrap article:nth-of-type(1) a::after {
+  content: "";
+  display: block;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  right: -35px;
+  width: 50px;
+  height: 0.5px;
+  background: #252A34;
+  transition: 0.5s;
+}
+#brand .inner .wrap article:nth-of-type(1) a:hover {
+  background: #252A34;
+  color: #ddd;
+}
+#brand .inner .wrap article:nth-of-type(1) a:hover::before {
+  opacity: 1;
+  transform: translateY(-50%) rotate(180deg);
+}
+#brand .inner .wrap article:nth-of-type(1) a:hover::after {
+  width: 16px;
+  right: -25px;
 }
 #brand .inner .wrap article:nth-of-type(n+1):nth-of-type(n+2) {
   margin-bottom: 20px;
