a버튼 after 배경색 변경

--- a/css/style.css
+++ b/css/style.css
@@ -1672,11 +1672,12 @@ label {
   display: inline-block;
   margin-top: 40px;
   padding: 13px 26px;
-  border: 1px solid #252A34;
-  color: #252A34;
-  font: bold 14px/1 "Josefin Sans", "Noto Sans KR";
+  border: 1px solid #08D9D6;
+  color: #08D9D6;
+  font: normal 14px/1 "Josefin Sans", "Noto Sans KR";
   position: relative;
   transition: 0.5s;
+  z-index: 1;
 }
 #brand .inner .wrap article:nth-of-type(1) a::before {
   content: "";
@@ -1714,6 +1715,9 @@ label {
 #brand .inner .wrap article:nth-of-type(1) a:hover::after {
   width: 16px;
   right: -25px;
+}
+#brand .inner .wrap article:nth-of-type(1) a::after {
+  background: #08D9D6;
 }
 #brand .inner .wrap article:nth-of-type(n+1):nth-of-type(n+2) {
   margin-bottom: 20px;
