--- a/scss/common/_mixin.scss
+++ b/scss/common/_mixin.scss
@@ -51,13 +51,13 @@
 }
 
 //More 버튼 인터랙션
-@mixin btnMore($borderColor : $defColor) {
+@mixin btnMore($borderColor : $defColor, $fontWt : bold) {
     display: inline-block;
     margin-top: 40px;
     padding: 13px 26px;
     border: 1px solid $borderColor;
     color: $borderColor;
-    font: bold 14px/1 $fontDef;
+    font: $fontWt 14px/1 $fontDef;
     position: relative;
     transition: 0.5s;
 
