--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -72,7 +72,12 @@
           a {
             //color: $subColor1;
             //border: 1px solid $subColor1;
-            @include btnMore();
+            @include btnMore($borderColor: $themeColor, $fontWt : normal);
+            z-index: 1;
+
+            &::after {
+              background: $themeColor;
+            }
           }
         }
         
