a버튼 before 배경색 변경

--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -75,6 +75,10 @@
             @include btnMore($borderColor: $themeColor, $fontWt : normal);
             z-index: 1;
 
+            &::before {
+              background: $themeColor;
+            }
+
             &::after {
               background: $themeColor;
             }
