--- a/css/style.css
+++ b/css/style.css
@@ -1716,6 +1716,9 @@ label {
   width: 16px;
   right: -25px;
 }
+#brand .inner .wrap article:nth-of-type(1) a::before {
+  background: #08D9D6;
+}
 #brand .inner .wrap article:nth-of-type(1) a::after {
   background: #08D9D6;
 }
