--- a/css/style.css
+++ b/css/style.css
@@ -1719,6 +1719,10 @@ label {
 #brand .inner .wrap article:nth-of-type(1) a::before, #brand .inner .wrap article:nth-of-type(1) a::after {
   background: #08D9D6;
 }
+#brand .inner .wrap article:nth-of-type(1) a:hover {
+  color: #252A34;
+  background: #08D9D6;
+}
 #brand .inner .wrap article:nth-of-type(n+1):nth-of-type(n+2) {
   margin-bottom: 20px;
 }
