--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -74,6 +74,11 @@
             z-index: 1;
 
             &::before, &::after { background: $themeColor; }
+
+            &:hover {
+              color: $defColor;
+              background: $themeColor;
+            }
           }
         }
         
