--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -57,6 +57,10 @@
           padding: 170px 50px 0px;
           text-align: center;
 
+          i {
+            color: #fff;
+          }
+
           h2 {
             font: bold 22px/1 $fontDef;
             margin-bottom: 10px;
