--- a/css/style.css
+++ b/css/style.css
@@ -1660,6 +1660,7 @@ label {
 }
 #brand .inner .wrap article:nth-of-type(1) i {
   color: #fff;
+  font-size: 50px;
 }
 #brand .inner .wrap article:nth-of-type(1) h2 {
   font: bold 22px/1 "Josefin Sans", "Noto Sans KR";
