i태그에 margin-bottom 추가

--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -60,6 +60,7 @@
           i {
             color: #fff;
             font-size: 50px;
+            margin-bottom: 10px;
           }
 
           h2 {
