--- a/css/style.css
+++ b/css/style.css
@@ -1661,6 +1661,7 @@ label {
 #brand .inner .wrap article:nth-of-type(1) i {
   color: #fff;
   font-size: 50px;
+  margin-bottom: 10px;
 }
 #brand .inner .wrap article:nth-of-type(1) h2 {
   font: bold 22px/1 "Josefin Sans", "Noto Sans KR";
