--- a/css/style.css
+++ b/css/style.css
@@ -1659,7 +1659,7 @@ label {
   text-align: center;
 }
 #brand .inner .wrap article:nth-of-type(1) i {
-  color: #fff;
+  color: #FF2E63;
   font-size: 50px;
   margin-bottom: 10px;
 }
