--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -58,7 +58,7 @@
           text-align: center;
 
           i {
-            color: $pointColor;
+            color: $themeColor;
             font-size: 50px;
             margin-bottom: 10px;
           }
