--- a/css/style.css
+++ b/css/style.css
@@ -1643,8 +1643,8 @@ label {
   width: 100%;
   height: 100%;
   transition: 0.5s;
-  opacity: 0;
-  top: 0;
+  opacity: 1;
+  top: 0%;
   left: 0;
 }
 #brand .inner .wrap article:nth-of-type(odd) {
