--- a/css/style.css
+++ b/css/style.css
@@ -1635,6 +1635,7 @@ label {
 }
 #brand .inner .wrap article:hover:not(#brand .inner .wrap article:hover:first-of-type)::after {
   opacity: 1;
+  top: 0%;
 }
 #brand .inner .wrap article::after {
   content: "";
