--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -30,6 +30,7 @@
           &:not(&:first-of-type) {
             &::after {
               opacity: 1;
+              top: 0%;
             }
           }
         }
