--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -31,6 +31,7 @@
             &::after {
               opacity: 1;
               top: 0%;
+              //height: 100%;
             }
           }
         }
@@ -40,7 +41,7 @@
           position: absolute;
           background: linear-gradient(45deg, rgba(8, 217, 214, 0.6), rgba(255, 46, 98, 0.6));
           width: 100%;
-          height: 100%;
+          height: 0%;
           transition: 0.5s;
           opacity: 1;
           top: 100%;
