--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -31,7 +31,7 @@
             &::after {
               opacity: 1;
               top: 0%;
-              //height: 100%;
+              height: 100%;
             }
           }
         }
