--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -30,8 +30,6 @@
           &:not(&:first-of-type) {
             &::after {
               opacity: 1;
-              top: 0%;
-              height: 100%;
             }
           }
         }
@@ -41,10 +39,10 @@
           position: absolute;
           background: linear-gradient(45deg, rgba(8, 217, 214, 0.6), rgba(255, 46, 98, 0.6));
           width: 100%;
-          height: 0%;
+          height: 100%;
           transition: 0.5s;
-          opacity: 1;
-          top: 100%;
+          opacity: 0;
+          top: 0;
           left: 0;
         }
 
