--- a/css/style.css
+++ b/css/style.css
@@ -1735,6 +1735,7 @@ label {
   width: 100%;
   height: 100%;
   object-fit: cover;
+  transition: 0.5s;
 }
 #brand .inner .wrap::after {
   content: "";
