--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -32,6 +32,8 @@
               opacity: 1;
             }
           }
+
+          
         }
 
         &::after {
@@ -101,6 +103,7 @@
           width: 100%;
           height: 100%;
           object-fit: cover;
+          transition: 0.5s;
         }
       }
 
