--- a/css/style.css
+++ b/css/style.css
@@ -1636,6 +1636,9 @@ label {
 #brand .inner .wrap article:hover:not(#brand .inner .wrap article:hover:first-of-type)::after {
   opacity: 1;
 }
+#brand .inner .wrap article:hover img {
+  transform: scale(1.15);
+}
 #brand .inner .wrap article::after {
   content: "";
   position: absolute;
