--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -33,7 +33,9 @@
             }
           }
 
-          
+          img {
+            transform: scale(1.15);
+          }
         }
 
         &::after {
