--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -25,6 +25,7 @@
         margin-right: 20px;
         position: relative;
         cursor: pointer;
+        overflow: hidden;
 
         &:hover {
           &:not(&:first-of-type) {
