--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -42,7 +42,7 @@
         &::after {
           content: '';
           position: absolute;
-          background: linear-gradient(45deg, rgba(8, 217, 214, 0.6), rgba(255, 46, 98, 0.6));
+          background: rgba(0, 0, 0, .4);
           width: 100%;
           height: 100%;
           transition: 0.5s;
