--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -102,6 +102,12 @@
           margin-bottom: 20px;
         }
 
+        &:not(&:first-of-type) {
+          p {
+            position: absolute;
+          }
+        }
+
         img {
           width: 100%;
           height: 100%;
