--- a/css/style.css
+++ b/css/style.css
@@ -1737,6 +1737,8 @@ label {
 }
 #brand .inner .wrap article:not(#brand .inner .wrap article:first-of-type) p {
   position: absolute;
+  bottom: 0px;
+  left: 0px;
 }
 #brand .inner .wrap article img {
   width: 100%;
