--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -105,6 +105,8 @@
         &:not(&:first-of-type) {
           p {
             position: absolute;
+            bottom: 0px;
+            left: 0px;
           }
         }
 
