--- a/css/style.css
+++ b/css/style.css
@@ -1739,6 +1739,7 @@ label {
   position: absolute;
   bottom: 0px;
   left: 0px;
+  padding: 30px;
 }
 #brand .inner .wrap article img {
   width: 100%;
