--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -107,6 +107,7 @@
             position: absolute;
             bottom: 0px;
             left: 0px;
+            padding: 30px;
           }
         }
 
