폰트에 색상주고 z-index

--- a/css/style.css
+++ b/css/style.css
@@ -1740,6 +1740,8 @@ label {
   bottom: 0px;
   left: 0px;
   padding: 30px;
+  color: #fff;
+  z-index: 1;
 }
 #brand .inner .wrap article img {
   width: 100%;
