--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -108,6 +108,8 @@
             bottom: 0px;
             left: 0px;
             padding: 30px;
+            color: #fff;
+            z-index: 1;
           }
         }
 
