--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -110,6 +110,7 @@
             padding: 30px;
             color: #fff;
             z-index: 1;
+            transition: 0.5s;
           }
         }
 
