--- a/css/style.css
+++ b/css/style.css
@@ -1737,10 +1737,10 @@ label {
 }
 #brand .inner .wrap article:not(#brand .inner .wrap article:first-of-type) p {
   position: absolute;
-  bottom: 0px;
+  bottom: -100%;
   left: 0px;
   padding: 30px;
-  color: #fff;
+  color: salmon;
   z-index: 1;
   transition: 0.5s;
 }
