--- a/css/style.css
+++ b/css/style.css
@@ -1744,6 +1744,9 @@ label {
   z-index: 1;
   transition: 0.5s;
 }
+#brand .inner .wrap article:not(#brand .inner .wrap article:first-of-type):hover p {
+  bottom: 0%;
+}
 #brand .inner .wrap article img {
   width: 100%;
   height: 100%;
