--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -113,6 +113,10 @@
             z-index: 1;
             transition: 0.5s;
           }
+
+          &:hover p {
+            bottom: 0%;
+          }
         }
 
         img {
