--- a/css/style.css
+++ b/css/style.css
@@ -1737,15 +1737,18 @@ label {
 }
 #brand .inner .wrap article:not(#brand .inner .wrap article:first-of-type) p {
   position: absolute;
-  bottom: -100%;
+  bottom: 0%;
   left: 0px;
   padding: 30px;
-  color: salmon;
+  color: #fff;
   z-index: 1;
   transition: 0.5s;
+  opacity: 0;
+  transform: translateY(50%);
 }
 #brand .inner .wrap article:not(#brand .inner .wrap article:first-of-type):hover p {
-  bottom: 0%;
+  opacity: 1;
+  transform: translateY(0%);
 }
 #brand .inner .wrap article img {
   width: 100%;
