--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -105,17 +105,19 @@
         &:not(&:first-of-type) {
           p {
             position: absolute;
-            bottom: -100%;
+            bottom: 0%;
             left: 0px;
             padding: 30px;
-            //color: #fff;
-            color: salmon;
+            color: #fff;
             z-index: 1;
             transition: 0.5s;
+            opacity: 0;
+            transform: translateY(50%);
           }
 
           &:hover p {
-            bottom: 0%;
+            opacity: 1;
+            transform: translateY(0%);
           }
         }
 
