--- a/scss/main/_cookiePopup.scss
+++ b/scss/main/_cookiePopup.scss
@@ -77,6 +77,10 @@
       display: inline-flex;
       align-items: center;
 
+      input[type=checkbox] {
+        cursor: pointer;
+      }
+
       label {
         color: $pointColor;
         font: 14px/1 $fontKr;
