--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -63,6 +63,7 @@
           height: 620px;
           padding: 170px 50px 0px;
           text-align: center;
+          cursor: auto;
 
           i {
             color: $themeColor;
