--- a/scss/sub/_community.scss
+++ b/scss/sub/_community.scss
@@ -177,7 +177,7 @@
           transition: 0.4s;
           cursor: pointer;
           position: relative;
-          font: 15px/1.3 $fontDef;
+          font: 15px/1.3 $fontKr;
           color: $defColor;
 
           &.on {
