--- a/css/style.css
+++ b/css/style.css
@@ -2868,7 +2868,6 @@ label {
   padding: 20px 15px;
   border-bottom: 1px solid #eee;
   text-align: center;
-  font-family: "Noto Sans KR";
   font: 14px/1.4 "Noto Sans KR";
 }
 .community .inner article table tr td:nth-of-type(2) {
@@ -2943,8 +2942,10 @@ label {
   padding: 25px 60px;
   position: relative;
   background: #eee;
-  font: 15px/1.3 "Josefin Sans", "Noto Sans KR";
+  font: 15px/1.3 "Noto Sans KR";
   color: #252A34;
+  transition: 1s;
+  height: 0%;
   display: none;
 }
 .community .inner article .faq dd.on {
