--- a/css/style.css
+++ b/css/style.css
@@ -2942,11 +2942,13 @@ label {
   padding: 25px 60px;
   position: relative;
   background: #eee;
-  font: 15px/1.3 "Noto Sans KR";
   color: #252A34;
   transition: 1s;
   height: 0%;
   display: none;
+}
+.community .inner article .faq dd ul li {
+  font: 15px/1.3 "Noto Sans KR";
 }
 .community .inner article .faq dd.on {
   display: block;
