--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -35,7 +35,9 @@
           }
 
           img {
-            filter: blur(50);
+            &::after {
+
+            }
           }
         }
 
@@ -128,6 +130,11 @@
           object-fit: cover;
           transition: 0.5s;
           position: relative;
+
+          &::after {
+            content: '';
+            
+          }
         }
       }
 
