--- a/css/style.css
+++ b/css/style.css
@@ -1650,6 +1650,7 @@ label {
   opacity: 0;
   top: 0;
   left: 0;
+  filter: blur(1);
 }
 #brand .inner .wrap article:nth-of-type(odd) {
   margin-right: 0px;
@@ -1755,11 +1756,6 @@ label {
   width: 100%;
   height: 100%;
   object-fit: cover;
-  transition: 0.5s;
-  position: relative;
-}
-#brand .inner .wrap article img::after {
-  content: "";
 }
 #brand .inner .wrap::after {
   content: "";
