--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -45,7 +45,10 @@
           opacity: 0;
           top: 0;
           left: 0;
-          filter: blur(1);
+        }
+
+        &::before {
+          content: '';
         }
 
         &:nth-of-type(odd) {
