--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -136,7 +136,11 @@
 }
 
 /* tablet ------------------------- */
-@media screen and (max-width: $tablet) {}
+@media screen and (max-width: $tablet) {
+
+}
 
 /* mobile ------------------------- */
-@media screen and (max-width: $mobile) {}
+@media screen and (max-width: $mobile) {
+  
+}
