--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -153,79 +153,27 @@
         article {
           width: 49%;
           height: 300px;
-          margin-right: 2%;
+          margin-right: 0%;
 
           &:nth-of-type(even) {
             margin-left: 0%;
+            margin-right: 2%;
           }
   
           &:nth-of-type(1) {
+            width: 100%;
             height: 620px;
             padding: 170px 50px 0px;
             text-align: center;
             cursor: auto;
-  
-            i {
-              color: $themeColor;
-              font-size: 50px;
-              margin-bottom: 10px;
-            }
-  
-            h2 {
-              font: bold 22px/1 $fontDef;
-              margin-bottom: 10px;
-              color: $subColor2;
-            }
-  
-            p {
-              color: #999;
-              font: 13px/1.3 $fontDef;
-              margin-bottom: 30px;
-            }
-  
-            a {
-              @include btnMore($borderColor: $pointColor);
-              z-index: 1;
-  
-              &::before,
-              &::after {
-                background: $pointColor;
-              }
-  
-              &:hover {
-                color: $defColor;
-                background: $pointColor;
-              }
-            }
           }
   
           &:nth-of-type(n+1):nth-of-type(n+2) {
             margin-bottom: 20px;
           }
-  
-          &:not(&:first-of-type) {
-            p {
-              position: absolute;
-              bottom: 0%;
-              left: 0px;
-              padding: 30px;
-              color: #fff;
-              z-index: 1;
-              transition: 0.5s;
-              opacity: 0;
-              transform: translateY(50%);
-            }
-  
-            &:hover p {
-              opacity: 1;
-              transform: translateY(0%);
-            }
-          }
-  
-          img {
-            width: 100%;
-            height: 100%;
-            object-fit: cover;
+
+          &:nth-of-type(4) {
+            margin-right: 2%;
           }
         }
   
