--- a/scss/main/_brand.scss
+++ b/scss/main/_brand.scss
@@ -139,7 +139,6 @@
       width: 100%;
   
       .wrap {
-        width: 100%;
   
         article {
           width: 49%;
@@ -173,5 +172,24 @@
 
 /* mobile ------------------------- */
 @media screen and (max-width: $mobile) {
+  #brand {
   
+    .inner {
+  
+      .wrap {
+        article {
+          width: 100%;
+          margin-right: 0%;
+
+          &:nth-of-type(even) {
+            margin-right: 0%;
+          }
+
+          &:nth-of-type(4) {
+            margin-right: 0%;
+          }
+        }
+      }
+    }
+  }
 }
