검색란 outline 색상 변경

--- a/css/style.css
+++ b/css/style.css
@@ -3110,7 +3110,7 @@ label {
   border: 1px solid #03A6A6;
   padding-left: 10px;
   background: #efffff;
-  outline-color: #FF2E63;
+  outline-color: #08D9D6;
 }
 #gallery #searchBox #search::placeholder {
   color: #252A34;
