--- a/scss/sub/_gallery.scss
+++ b/scss/sub/_gallery.scss
@@ -20,7 +20,7 @@
       border: 1px solid $subColor1;
       padding-left: 10px;
       background: $subColor2;
-      outline-color: $pointColor;
+      outline-color: $themeColor;
 
       &::placeholder {
         color: $defColor;
