--- a/css/style.css
+++ b/css/style.css
@@ -2836,7 +2836,7 @@ label {
 }
 .community .inner article {
   display: none;
-  transform: translateY(100px);
+  transition: 1s;
 }
 .community .inner article.on {
   display: block;
